SERVER-11670 do not print stack trace if attempting to commit journal while in local lock